--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <body>
     <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
+      <h2 id="date-and-time"></h2>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
